cod-tools (unreleased)

  * ...

cod-tools (3.7.0)

  * Added:
    - cif_filter:
        - the '--estimate-space-group' option as an alias for
          the '--estimate-spacegroup' option.
        - the '--keep-unrecognised-space-groups' option a an alias for
          the '--keep-unrecognised-spacegroups' option.
  * Changed:
    - COD::CIF::Data:
        - updated the lookup_space_group() subroutine to also strip leading
          and trailing whitespace symbols when constructing lookup keys.
        - updated the get_space_group_number() subroutine to report symmetry
          operation lists that do not correspond to a known space group.
        - updated the get_space_group_number() subroutine to report space
          group number values that are not integers in the range of [1, 230].
        - added several more alternative space group data names in
          the space_group_data_names() subroutine.
        - updated the get_sg_data() subroutine to also report space group
          information mismatches even when one of the values is a CIF special
          value. 
    - COD::CIF::Data::CIF2COD::
        - updated the cif2cod() subroutine to only output the space group IT
          number that is explicitly provided instead of trying to infer it from
          the symmetry operation list.
  * Fixed:
    - COD::CIF::Data:
        - updated the get_space_group_number() subroutine to ignore
          CIF special values.
    - cif_filter:
        - updated the representation of space group symmetry operations derived
          from superspace group symmetry operations to use fractions instead of
          decimals when possible.
    - running Graph::Nauty build and tests only once.
  * Removed:
    - dependency installer for Debian 9.

cod-tools (3.6.0)

  * Added:
    - COD::CIF::Data:
        - the get_space_group_number() subroutine.
    - cif_molecule:
        - implemented the copying of the '_atom_type_symbol' and