@@ -1,0 +1,341 @@
+#------------------------------------------------------------------------------
+#$Author$
+#$Date$
+#$Rev$
+#$URL$
+#------------------------------------------------------------------------------
+#*
+# Data for this dataset was extracted from paper
+# "Electronegativity effects and single covalent bond lengths of molecules
+# in the gas phase", doi:10.1039/C4DT00807C
+---
+"H":
+  atomic_number: 1
+  covalent_radius: 2.00
+  electronegativity: 0.371
+"He":
+  atomic_number: 2
+"Li":
+  atomic_number: 3
+  covalent_radius: 1.24
+  electronegativity: 1.292
+"Be":
+  atomic_number: 4
+  covalent_radius: 2.14
+  electronegativity: 0.930
+"B":
+  atomic_number: 5
+  covalent_radius: 1.81
+  electronegativity: 0.848
+"C":
+  atomic_number: 6
+  covalent_radius: 2.30
+  electronegativity: 0.795
+"N":
+  atomic_number: 7
+  covalent_radius: 2.82
+  electronegativity: 0.759
+"O":
+  atomic_number: 8
+  covalent_radius: 3.39
+  electronegativity: 0.732
+"F":
+  atomic_number: 9
+  covalent_radius: 4.00
+  electronegativity: 0.706
+"Ne":
+  atomic_number: 10
+"Na":
+  atomic_number: 11
+  covalent_radius: 1.18
+  electronegativity: 1.613
+"Mg":
+  atomic_number: 12
+  covalent_radius: 1.76
+  electronegativity: 1.450
+"Al":
+  atomic_number: 13
+  covalent_radius: 1.31
+  electronegativity: 1.200
+"Si":
+  atomic_number: 14
+  covalent_radius: 1.66
+  electronegativity: 1.124
+"P":
+  atomic_number: 15
+  covalent_radius: 2.05
+  electronegativity: 1.080
+"S":
+  atomic_number: 16
+  covalent_radius: 2.49
+  electronegativity: 1.072
+"Cl":
+  atomic_number: 17
+  covalent_radius: 2.95
+  electronegativity: 0.994
+"Ar":
+  atomic_number: 18
+"K":
+  atomic_number: 19
+  covalent_radius: 1.00
+  electronegativity: 1.952
+"Ca":
+  atomic_number: 20
+  covalent_radius: 1.40
+  electronegativity: 1.723
+"Sc":
+  atomic_number: 21
+  covalent_radius: 1.51
+  electronegativity: 1.395
+"Ti":
+  atomic_number: 22
+  covalent_radius: 1.57
+  electronegativity: 1.294
+"V":
+  atomic_number: 23
+  covalent_radius: 1.62
+  electronegativity: 1.260
+"Cr":
+  atomic_number: 24
+  covalent_radius: 1.65
+  electronegativity: 1.250
+"Mn":
+  atomic_number: 25
+  covalent_radius: 1.71
+  electronegativity: 1.310
+"Fe":
+  atomic_number: 26
+  covalent_radius: 1.77
+  electronegativity: 1.235
+"Co":
+  atomic_number: 27
+  covalent_radius: 1.84
+  electronegativity: 1.225
+"Ni":
+  atomic_number: 28
+  covalent_radius: 1.92
+  electronegativity: 1.187
+"Cu":
+  atomic_number: 29
+  covalent_radius: 2.02
+  electronegativity: 1.140
+"Zn":
+  atomic_number: 30
+  covalent_radius: 2.16
+  electronegativity: 1.199
+"Ga":
+  atomic_number: 31
+  covalent_radius: 1.31
+  electronegativity: 1.233
+"Ge":
+  atomic_number: 32
+  covalent_radius: 1.62
+  electronegativity: 1.234
+"As":
+  atomic_number: 33
+  covalent_radius: 1.95
+  electronegativity: 1.230
+"Se":
+  atomic_number: 34
+  covalent_radius: 2.30
+  electronegativity: 1.170
+"Br":
+  atomic_number: 35
+  covalent_radius: 2.67
+  electronegativity: 1.141
+"Kr":
+  atomic_number: 36
+"Rb":
+  atomic_number: 37
+  covalent_radius: 0.96
+  electronegativity: 2.077
+"Sr":
+  atomic_number: 38
+  covalent_radius: 1.31
+  electronegativity: 1.880
+"Y":
+  atomic_number: 39
+  covalent_radius: 1.54
+  electronegativity: 1.520
+"Zr":
+  atomic_number: 40
+  covalent_radius: 1.57
+  electronegativity: 1.430
+"Nb":
+  atomic_number: 41
+  covalent_radius: 1.61
+  electronegativity: 1.490
+"Mo":
+  atomic_number: 42
+  covalent_radius: 1.66
+  electronegativity: 1.380
+"Tc":
+  atomic_number: 43
+  covalent_radius: 1.71
+  electronegativity: 1.310
+"Ru":
+  atomic_number: 44
+  covalent_radius: 1.76
+  electronegativity: 1.300
+"Rh":
+  atomic_number: 45
+  covalent_radius: 1.84
+  electronegativity: 1.260
+"Pd":
+  atomic_number: 46
+  covalent_radius: 1.91
+  electronegativity: 1.200
+"Ag":
+  atomic_number: 47
+  covalent_radius: 1.92
+  electronegativity: 1.350
+"Cd":
+  atomic_number: 48
+  covalent_radius: 2.06
+  electronegativity: 1.340
+"In":
+  atomic_number: 49
+  covalent_radius: 1.26
+  electronegativity: 1.450
+"Sn":
+  atomic_number: 50
+  covalent_radius: 1.49
+  electronegativity: 1.432
+"Sb":
+  atomic_number: 51
+  covalent_radius: 1.73
+  electronegativity: 1.425
+"Te":
+  atomic_number: 52
+  covalent_radius: 2.01
+  electronegativity: 1.340
+"I":
+  atomic_number: 53
+  covalent_radius: 2.32
+  electronegativity: 1.333
+"Xe":
+  atomic_number: 54
+"Cs":
+  atomic_number: 55
+  covalent_radius: 0.89
+  electronegativity: 2.200
+"Ba":
+  atomic_number: 56
+  covalent_radius: 1.20
+  electronegativity: 2.000
+"La":
+  atomic_number: 57
+  covalent_radius: 1.28
+  electronegativity: 1.720
+"Ce":
+  atomic_number: 58
+  covalent_radius: 1.27
+  electronegativity: 1.640
+"Pr":
+  atomic_number: 59
+  covalent_radius: 1.25
+  electronegativity: 1.640
+"Nd":
+  atomic_number: 60
+  covalent_radius: 1.27
+  electronegativity: 1.630
+"Pm":
+  atomic_number: 61
+  covalent_radius: 1.28
+  electronegativity: 1.620
+"Sm":
+  atomic_number: 62
+  covalent_radius: 1.30
+  electronegativity: 1.620
+"Eu":
+  atomic_number: 63
+  covalent_radius: 1.30
+  electronegativity: 1.610
+"Gd":
+  atomic_number: 64
+  covalent_radius: 1.41
+  electronegativity: 1.600
+"Tb":
+  atomic_number: 65
+  covalent_radius: 1.35
+  electronegativity: 1.600
+"Dy":
+  atomic_number: 66
+  covalent_radius: 1.36
+  electronegativity: 1.590
+"Ho":
+  atomic_number: 67
+  covalent_radius: 1.38
+  electronegativity: 1.580
+"Er":
+  atomic_number: 68
+  covalent_radius: 1.40
+  electronegativity: 1.570
+"Tm":
+  atomic_number: 69
+  covalent_radius: 1.42
+  electronegativity: 1.570
+"Yb":
+  atomic_number: 70
+  covalent_radius: 1.44
+  electronegativity: 1.560
+"Lu":
+  atomic_number: 71
+  covalent_radius: 1.25
+  electronegativity: 1.550
+"Hf":
+  atomic_number: 72
+  covalent_radius: 1.57
+  electronegativity: 1.428
+"Ta":
+  atomic_number: 73
+  covalent_radius: 1.73
+  electronegativity: 1.370
+"W":
+  atomic_number: 74
+  covalent_radius: 1.81
+  electronegativity: 1.355
+"Re":
+  atomic_number: 75
+  covalent_radius: 1.80
+  electronegativity: 1.345
+"Os":
+  atomic_number: 76
+  covalent_radius: 1.94
+  electronegativity: 1.350
+"Ir":
+  atomic_number: 77
+  covalent_radius: 2.06
+  electronegativity: 1.300
+"Pt":
+  atomic_number: 78
+  covalent_radius: 2.06
+  electronegativity: 1.220
+"Au":
+  atomic_number: 79
+  covalent_radius: 2.12
+  electronegativity: 1.200
+"Hg":
+  atomic_number: 80
+  covalent_radius: 2.40
+  electronegativity: 1.316
+"Tl":
+  atomic_number: 81
+  covalent_radius: 1.34
+  electronegativity: 1.580
+"Pb":
+  atomic_number: 82
+  covalent_radius: 1.51
+  electronegativity: 1.565
+"Bi":
+  atomic_number: 83
+  covalent_radius: 1.68
+  electronegativity: 1.535
+"Po":
+  atomic_number: 84
+  covalent_radius: 1.90
+  electronegativity: 1.450
+"At":
+  atomic_number: 85
+  covalent_radius: 2.12
+  electronegativity: 1.440
