@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
-  * ...
+  * Added:
+    - COD::AtomProperties assembler:
+      - covalent radii from Lang and Smith (2014).
 
 cod-tools (3.7.0)
 
